config for typings of angular, angular-ui, lodash and node

--- a/src/wwwroot/jsconfig.json
+++ b/src/wwwroot/jsconfig.json
@@ -3,13 +3,8 @@
       "target": "ES6",
       "module": "commonjs"
    },
-   "files": [
-     "typings/browser.d.ts" 
-   ],
    "exclude": [
       "build",
-      "node_modules",
-      "typings/main",
-      "typings/main.d.ts"
+      "node_modules"
    ]
 }
